# progressivis-tutorial

./: .gitignore  LICENSE  README.md  check.sh  clean.sh  pyproject.toml  sync.sh
tutorial/1-low-level/: Summary.py  summary.py  userguide1.0.py  userguide1.1.py  userguide1.2-pandas.py  userguide1.2.py  userguide1.3.py  userguide1.4.py  userguide1.5.py  userguide1.6.py  userguide1.py
tutorial/2-progressibook/: userguide-widgets1.0.ipynb  userguide-widgets1.1.ipynb
tutorial/3-module-creation/: simple_max-v1.py  simple_max-v2.py  simple_max-v3.py  simple_max.py
tutorial/4-visualization-creation/: AnyWidget-Image.py  MulticlassScatterplotDemo.py
tutorial/5-loader-creation/: small_csv_loader-v1.py
